--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             
             <div class="flex flex-wrap justify-center gap-4 mb-8">
-                <a href="#" class="bg-white text-blue-600 px-6 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors flex items-center gap-2">
+                <a href="https://github.com/Ousmane-KA/ka-cloud-devops.github.io/blob/main/Documents/CV-OUSMANE-KA.pdf" class="bg-white text-blue-600 px-6 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors flex items-center gap-2">
                     <i class="fas fa-download"></i> Télécharger CV
                 </a>
                 <a href="#" class="border-2 border-white text-white px-6 py-3 rounded-lg font-semibold hover:bg-white hover:text-blue-600 transition-colors flex items-center gap-2">
